--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,12 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-monitor_filters = default
-                    esp32_exception_decoder
-
 build_flags =   -DCORE_DEBUG_LEVEL=5
 				-Wall
 
-lib_deps = https://github.com/AlixANNERAUD/Xila.git
+lib_deps = alix-anneraud/Xila @ ^0.1.0
+
+board_build.partitions = Partitions.csv
 
 build_type = debug
 
@@ -26,9 +25,9 @@ build_type = debug
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-monitor_filters =   default
-                    esp32_exception_decoder
 
-lib_deps = https://github.com/AlixANNERAUD/Xila.git
+lib_deps = alix-anneraud/Xila @ ^0.1.0
+
+board_build.partitions = Partitions.csv
 
 build_type = release
